Update "send notification" method and rename report column from admin.

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1296,7 +1296,7 @@ en:
         body_1: User %{user} has been reported by %{token}
         body_2: 'Reason: %{reason}'
         greetings: Greetings,<br/>%{organization_name}<br/><a href="%{organization_url}">%{organization_url}</a>
-        hello: Hello,
+        hello: Hello %{admin},
         subject: A new user has been reported in %{organization_name}
     version:
       show:
