--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -575,7 +575,7 @@ en:
           officialize: Officialize
           officialized: Officialized
           reofficialize: Reofficialize
-          reports: Report count
+          reports: Reports
           show_email: Show email address
           status: Status
           unofficialize: Unofficialize
