--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -91,6 +91,7 @@ en:
             default_registration_terms: Default registration terms
             registration_code_enabled: Registration code enabled
             enable_pads_creation: Enable pads creation
+            registration_code_enabled: Registration code enabled
             resources_permissions_enabled: Actions permissions can be set for each meeting
             scope_id: Scope
             scopes_enabled: Scopes enabled
