--- a/decidim-initiatives/config/locales/en.yml
+++ b/decidim-initiatives/config/locales/en.yml
@@ -422,6 +422,13 @@ en:
           title:
             one: "%{count} initiative"
             other: "%{count} initiatives"
+        committee_members:
+          approve: Approve
+          confirm_revoke: Are you sure?
+          invite_to_committee_help: Share this link to invite other participants to the promoter committee
+          no_members_yet: There are no members in the promoter committee
+          revoke: Revoke
+          title: Committee members
         filters:
           any: Any
           area: Area
