chore: normalize decidim-admin locales

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -478,21 +478,6 @@ en:
             state: State
             users_count: Participants count
       moderations:
-        reports:
-          index:
-            title: "Moderation reports"
-            callout_html: A content appears in the moderation panel when it has been signaled by a user (can be anyone with a registered account) by clicking on the %{icon} flag next to the item.
-            content_original_language: "Content original language"
-            reported_content: "Reported content"
-            author: "Author(s)"
-            participatory_space: "Participatory space"
-            see_original: "See original"
-            see_current: "See current"
-          show:
-            title: Report details
-            report_reason: "Reason"
-            report_details: "Reason details"
-            report_language: "Report language"
         index:
           title: Moderations
         report:
@@ -500,6 +485,21 @@ en:
             does_not_belong: Does not belong
             offensive: Offensive
             spam: Spam
+        reports:
+          index:
+            author: Author(s)
+            callout_html: A content appears in the moderation panel when it has been signaled by a user (can be anyone with a registered account) by clicking on the %{icon} flag next to the item.
+            content_original_language: Content original language
+            participatory_space: Participatory space
+            reported_content: Reported content
+            see_current: See current
+            see_original: See original
+            title: Moderation reports
+          show:
+            report_details: Reason details
+            report_language: Report language
+            report_reason: Reason
+            title: Report details
       newsletter_templates:
         index:
           preview_template: Preview
@@ -828,13 +828,13 @@ en:
           reason: You need to provide a reason when managing a non managed participant
     moderations:
       actions:
+        expand: Expand
         hidden: Hidden
         hide: Hide
         not_hidden: Not hidden
         title: Actions
         unhide: Unhide
         unreport: Unreport
-        expand: Expand
       admin:
         reportable:
           hide:
@@ -847,11 +847,6 @@ en:
             invalid: There was a problem unreporting the resource.
             success: Resource successfully unreported.
       models:
-        report:
-          fields:
-            reason: "Reason"
-            details: "Reason details"
-            locale: "Language"
         moderation:
           fields:
             created_at: Creation date
@@ -862,6 +857,11 @@ en:
             reported_content_url: Reported content URL
             reports: Reports
             visit_url: Visit URL
+        report:
+          fields:
+            details: Reason details
+            locale: Language
+            reason: Reason
   errors:
     messages:
       invalid_json: Invalid JSON
