--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -27,6 +27,10 @@ en:
           attributes:
             attachment:
               needs_to_be_reattached: Needs to be reattached
+        trustee:
+          attributes:
+            public_key:
+              cant_be_changed: can't be changed
   activerecord:
     models:
       decidim/elections/answer:
@@ -232,6 +236,42 @@ en:
         label: Order elections by
         older: Older
         recent: Recent
+      trustee_zone:
+        menu:
+          trustee_zone: Trustee zone
+        trustees:
+          show:
+            elections:
+              list:
+                election: Election
+                status: Status
+                voting_period: Voting period
+              no_elections: There are no elections where you act as a Trustee.
+              title: Elections
+            identification_keys:
+              cancel: Cancel
+              generate: Generate identification keys
+              generate_error: There was an error generating the identification keys.
+              generate_legend: You need to generate an identification pair of keys to participate on elections as a Trustee.
+              generate_legend_1: After pressing the button you should download the file with the generated identification keys.
+              generate_legend_2: Copy the downloaded file to a clean USB device
+              generate_legend_3: Ensure your computer doesn't have a copy of the file (e.g. check the Downloads and Desktop folders).
+              generate_legend_4: Make another copy of the file on a different external device and store it in a very safe place.
+              submit: Submit
+              submit_legend: After following all the steps explained above, complete the process sending the public identification key to the Decidim server.
+              submit_title: Submit the public identification key
+              title: Trustee identification keys
+              upload: Upload your identification keys
+              upload_error:
+                invalid_format: The uploaded file doesn't contain any identification key.
+                invalid_key: The identification keys in the uploaded file can't be loaded.
+                invalid_public_key: The identification keys in the uploaded file doesn't match the public identification key stored by Decidim.
+              upload_legend: Decidim has your public identification keys, but your browser still doesn't have it. You need to import the file with your identification keys to your computer from the backup you created after generating them.
+            not_supported_browser_description: It looks like you are using a web browser that can't be used to act as a Trustee. Make sure you're using the most recent version of your browser, or try using any of the most popular browsers to be able to complete your Trustee tasks.
+            not_supported_browser_title: Upgrade browser to act as a Trustee
+            trustee_role_description: You have been assigned to act as a Trustee in some of the elections celebrated in this platform.
+          update:
+            success: Your identification public key was successfully stored.
       votes:
         confirm:
           answer: Answer
@@ -284,7 +324,7 @@ en:
           notification_title: The <a href="%{resource_path}">%{resource_title}</a> election is now active for %{participatory_space_title}.
         trustees:
           new_trustee:
-            email_intro: 'An admin has added you as trustee for %{resource_name}. You should create your public key here: LINK'
+            email_intro: An admin has added you as trustee for %{resource_name}. You should create your public key <a href='%{trustee_zone_url}'>in your trustee zone</a>
             email_outro: You have received this notification because you've been added as trustee for %{resource_name}.
             email_subject: You are a trustee for %{resource_name}.
             notification_title: You are a trustee for <a href="%{participatory_space_url}">%{resource_name}</a>.
