Add trustees public_key and rubocop fixes

--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -149,29 +149,28 @@ en:
             invalid: There was a problem updating this question
             success: Question successfully updated
         setup:
+          errors:
+            max_selections: The questions do not have a <strong>correct value for amount of answers</strong>
+            minimum_answers: At least 1 question <strong>does not have more than 1 answer</strong>
+            minimum_questions: The election <strong>does not have any questions</strong>
+            published: The election is <strong>not published</strong>
+            time_before: The start time is in <strong>less than 3 hours</strong> before the election starts
+            trustee_public_key: does not have a <strong>valid public key</strong>
+            trustees_quorum: The amount of trustees <strong>does not correspond with the trustees quorum</strong> required
+          requirements:
+            max_selections: All the questions have a correct value for <strong>maximum of answers</strong>
+            minimum_answers: Each question has <strong>at least 2 answers</strong>
+            minimum_questions: The election has <strong>at least 1 question</strong>
+            published: The election is <strong>published</strong>
+            time_before: The setup is being done <strong>at least 3 hours</strong> before the election starts
+            trustee_public_key: has a <strong>valid public key</strong>
+            trustees_quorum: The size of this list of trustees is correct and it will be needed <strong>at least %{quorum} trustees </strong> to perform the tally process
           show:
             setup: Setup election
             title: Election setup
           update:
             setup: Setup election
             title: Election setup
-          requirements:
-            published: The election is <strong>published</strong>
-            time_before: The setup is being done <strong>at least 3 hours</strong> before the election starts
-            minimum_questions: The election has <strong>at least 1 question</strong>
-            minimum_answers: Each question has <strong>at least 2 answers</strong>
-            max_selections: All the questions have a correct value for <strong>maximum of answers</strong>
-            trustees_quorum: The size of this list of trustees is correct and it will be needed <strong>at least %{Decidim::Elections.bulletin_board.quorum} trustees </strong>
-                             to perform the tally process
-            trustee_public_key: has a <strong>valid public key</strong>
-          errors:
-            published: The election is <strong>not published</strong>
-            time_before: The start time is in <strong>less than 3 hours</strong> before the election starts
-            minimum_questions: The election <strong>does not have any questions</strong>
-            minimum_answers: At least 1 question <strong>does not have more than 1 answer</strong>
-            max_selections: The questions do not have a <strong>correct value for amount of answers</strong>
-            trustees_quorum: The amount of trustees <strong>does not correspond with the trustees quorum</strong> required
-            trustee_public_key: does not have a <strong>valid public key</strong>
         trustees_participatory_spaces:
           actions:
             disable: Disable
