--- a/decidim-participatory_processes/config/locales/es.yml
+++ b/decidim-participatory_processes/config/locales/es.yml
@@ -330,7 +330,7 @@ es:
           meta_scope: Ámbito
           name: Título, descripción y hashtag
           participatory_processes:
-            one: "1 proceso"
+            one: 1 proceso
             other: "%{count} procesos"
       show:
         title: Grupos de procesos participativos
