fix: add missing translation keys

--- a/decidim-assemblies/config/locales/en.yml
+++ b/decidim-assemblies/config/locales/en.yml
@@ -306,6 +306,9 @@ en:
         content_blocks:
           highlighted_assemblies:
             max_results: Maximum amount of elements to show
+        new_import:
+          accepted_types:
+            json: JSON
       assembly_members:
         index:
           members: Members
