--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -85,6 +85,11 @@ en:
           new:
             create: Create answer
             title: New answer
+          select:
+            disable: Unselect answer
+            enable: Mark answer as selected
+            invalid: There was a un-/selecting this answer
+            success: Answer sucessfully un-/selected
           update:
             invalid: There was a problem updating this answer
             success: Answer successfully updated
@@ -237,6 +242,15 @@ en:
             available_answers: Available answers
             description: These are the questions you will find in the voting process
             title: Election questions
+          results:
+            aria_value_text: "%{calculated} % percent"
+            description: These are the results of the voting, for each question
+            selected: Selected
+            title: Election results
+            votes:
+              one: "%{count} vote"
+              other: "%{count} votes"
+              zero: "%{count} votes"
           vote: Vote
           voting_period_status:
             finished: Voting began on %{start_time} and ended on %{end_time}
