--- a/decidim-budgets/config/locales/en.yml
+++ b/decidim-budgets/config/locales/en.yml
@@ -210,7 +210,7 @@ en:
           votes:
             one: vote
             other: votes
-          you_voted: You voted
+          you_voted: You voted this
         project_budget_button:
           add: Add to your vote
           add_descriptive: Add project %{resource_name} to your vote
