--- a/decidim-budgets/config/locales/en.yml
+++ b/decidim-budgets/config/locales/en.yml
@@ -14,6 +14,7 @@ en:
         decidim_scope_id: Scope
         description: Description
         proposal_ids: Related proposals
+        selected: Selected for implementation
         title: Title
   activerecord:
     models:
