--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -130,7 +130,7 @@ en:
         update: "%{user_name} updated the organization settings"
       participatory_space_private_user:
         create: "%{user_name} invited %{resource_name} to be a private participant"
-        create_via_csv: "%{user_name} invited %{resource_name} via csv to be a private participant"
+        create_via_csv: "%{user_name} invited %{resource_name} via CSV to be a private participant"
         delete: "%{user_name} removed the participant %{resource_name} as a private participant"
       scope:
         create: "%{user_name} created the %{resource_name} scope"
@@ -927,7 +927,7 @@ en:
           error: Message was not sent due to an error
     metrics:
       download:
-        csv: Download data (csv)
+        csv: Download data (CSV)
       followers:
         description: Number of participants that follow this participation space
         object: followers
