--- a/decidim-verifications/config/locales/en.yml
+++ b/decidim-verifications/config/locales/en.yml
@@ -132,7 +132,7 @@ en:
             title: Current census data
           instructions:
             body: To do this you must enter system administration and add the csv_census authorizations to the organization
-            title: You need to activate the csv census for this organization
+            title: You need to activate the CSV census for this organization
           new:
             file: ".csv file with emails data"
             info: 'Must be a file in CSV format with only one column with the email address:'
