--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -238,21 +238,21 @@ en:
           filter: Filter
           filter_by: Filter by
           unfold: Unfold
+        preview:
+          available_answers: Available answers
+          description: These are the questions you will find in the voting process
+          title: Election questions
+        results:
+          description: These are the results of the voting, for each question
+          selected: Selected
+          title: Election results
+          votes:
+            one: "%{count} vote"
+            other: "%{count} votes"
+            zero: "%{count} votes"
         show:
           back: Available elections
           preview: Preview
-          questions_preview:
-            available_answers: Available answers
-            description: These are the questions you will find in the voting process
-            title: Election questions
-          results:
-            description: These are the results of the voting, for each question
-            selected: Selected
-            title: Election results
-            votes:
-              one: "%{count} vote"
-              other: "%{count} votes"
-              zero: "%{count} votes"
           vote: Vote
           voting_period_status:
             finished: Voting began on %{start_time} and ended on %{end_time}
