Make "ban" button clickable on Reported Users page

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -481,8 +481,10 @@ en:
       moderated_users:
         index:
           actions:
-            title: Actions
+            suspend: Suspend User
             unreport: Unreport
+            unsuspend: Unsuspend User
+            title: Actions
           name: Name
           nickname: Nickname
           reason: Reason
