export election results

--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -123,6 +123,7 @@ en:
             invalid: There was a problem updating this election
             success: Election successfully updated
         exports:
+          elections: Elections
           feedback_form_answers: Feedback form answers
         models:
           answer:
