--- a/decidim-accountability/config/locales/en.yml
+++ b/decidim-accountability/config/locales/en.yml
@@ -33,6 +33,8 @@ en:
   decidim:
     accountability:
       actions:
+        attachments: Attachments
+        attachment_collections: Folders
         confirm_destroy: Are you sure you want to delete this %{name}?
         destroy: Delete
         edit: Edit
