--- a/decidim-conferences/config/locales/en.yml
+++ b/decidim-conferences/config/locales/en.yml
@@ -401,6 +401,7 @@ en:
         go_to_twitter: Go to Twitter
         more_info: more info
         personal_website: Personal website
+        speaking_at: Speaking at
         show:
           more_info: more info
       conference_speaker_cell:
