--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -58,13 +58,14 @@ en:
         confirm_destroy: Are you sure?
         destroy: Destroy
         edit: Edit
-        edit_answers: Edit answers
-        edit_questions: Edit questions
         feedback: Voter feedback
         import: Import proposals to answers
+        manage_answers: Manage answers
+        manage_questions: Manage questions
         new: New %{name}
         preview: Preview
         publish: Publish
+        setup: Setup
         title: Actions
         unpublish: Unpublish
       admin:
@@ -105,6 +106,9 @@ en:
             title: New election
           publish:
             success: The election has been successfully published.
+          setup:
+            invalid: There was a problem setting up this election
+            success: Election successfully sent to the Bulletin Board
           unpublish:
             success: The election has been successfully unpublished.
           update:
@@ -147,6 +151,29 @@ en:
           update:
             invalid: There was a problem updating this question
             success: Question successfully updated
+        setup:
+          errors:
+            max_selections: The questions do not have a <strong>correct value for amount of answers</strong>
+            minimum_answers: Questions must have <strong>at least one answer</strong>.
+            minimum_questions: The election <strong>must have at least one question</strong>.
+            published: The election is <strong>not published</strong>
+            time_before: The start time is in <strong>less than 3 hours</strong> before the election starts
+            trustee_public_key: does not have a <strong>valid public key</strong>
+            trustees_quorum: The amount of trustees <strong>does not correspond with the trustees quorum</strong> required
+          requirements:
+            max_selections: All the questions have a correct value for <strong>maximum of answers</strong>
+            minimum_answers: Each question has <strong>at least 2 answers</strong>
+            minimum_questions: The election has <strong>at least 1 question</strong>
+            published: The election is <strong>published</strong>
+            time_before: The setup is being done <strong>at least 3 hours</strong> before the election starts
+            trustee_public_key: has a <strong>valid public key</strong>
+            trustees_quorum: The size of this list of trustees is correct and it will be needed <strong>at least %{quorum} trustees </strong> to perform the tally process
+          show:
+            setup: Setup election
+            title: Election setup
+          update:
+            setup: Setup election
+            title: Election setup
         trustees_participatory_spaces:
           actions:
             disable: Disable
@@ -335,6 +362,11 @@ en:
           email_subject: The %{resource_title} election is now active for %{participatory_space_title}.
           notification_title: The <a href="%{resource_path}">%{resource_title}</a> election is now active for %{participatory_space_title}.
         trustees:
+          new_election:
+            email_intro: You got added as a trustee for the %{resource_title} election.
+            email_outro: You have received this notification because you've been added as trustee for the %{resource_title} election.
+            email_subject: You are a trustee for the %{resource_title} election..
+            notification_title: You are a trustee for <a href="%{resource_path}">%{resource_title}</a> election.
           new_trustee:
             email_intro: An admin has added you as trustee for %{resource_name}. You should create your public key <a href='%{trustee_zone_url}'>in your trustee zone</a>
             email_outro: You have received this notification because you've been added as trustee for %{resource_name}.
