Fix bug in Edit meeting minutes title
Fix bug in Edit meeting minutes title

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -289,6 +289,7 @@ en:
             invalid: There was a problem creating this minutes
             success: Minutes successfully created
           edit:
+            title: Edit minutes
             update: Update
           new:
             create: Create
