Add Hybrid meeting events

--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -1,4 +1,5 @@
 ---
+
 en:
   activemodel:
     attributes:
@@ -403,6 +404,7 @@ en:
           type: Type
           type_values:
             all: All
+            hybrid: Hybrid
             in_person: In-person
             online: Online
         filters_small_view:
@@ -502,6 +504,7 @@ en:
           invalid: There was a problem leaving this meeting.
           success: You have left the meeting successfully.
       type_of_meeting:
+        hybrid: Hybrid
         in_person: In person
         online: Online
       types:
