--- a/decidim-elections/config/locales/en.yml
+++ b/decidim-elections/config/locales/en.yml
@@ -85,6 +85,14 @@ en:
           new:
             create: Create answer
             title: New answer
+          select:
+            disable: Unselect answer
+            enable: Mark answer as selected
+            invalid: There was a problem selecting this answer
+            success: Answer successfully selected
+          unselect:
+            invalid: There was a problem unselecting this answer
+            success: Answer successfully unselected
           update:
             invalid: There was a problem updating this answer
             success: Answer successfully updated
@@ -230,13 +238,21 @@ en:
           filter: Filter
           filter_by: Filter by
           unfold: Unfold
+        preview:
+          available_answers: Available answers
+          description: These are the questions you will find in the voting process
+          title: Election questions
+        results:
+          description: These are the results of the voting, for each question
+          selected: Selected
+          title: Election results
+          votes:
+            one: "%{count} vote"
+            other: "%{count} votes"
+            zero: "%{count} votes"
         show:
           back: Available elections
           preview: Preview
-          questions_preview:
-            available_answers: Available answers
-            description: These are the questions you will find in the voting process
-            title: Election questions
           vote: Vote
           voting_period_status:
             finished: Voting began on %{start_time} and ended on %{end_time}
