Add HTML titles in Admin panel  (#6666)
* Use `add_decidim_page_title` helper for Admin Panel

* Add admin HTML title in Dashboard

* Add admin HTML titles in Participatory Processes

* Use current_organization.name in admin title bar alt image

* Fix bug in Edit blog post title

* Fix bug in Budgets admin import propsals card-title

* Fix bug in Elections admin import propsals card-title

* Fix bug in Proposals admin import propsals card-title

* Fix bug in Edit meeting title

* Fix linter warnings

* Fix bug in Edit meeting minutes title

Fix bug in Edit meeting minutes title

* Remove trailing white line

* Remove title in meeting invites

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -775,6 +775,7 @@ en:
         impersonatable_users: Manageable participants
         impersonations: Participants management
         metrics: Metrics
+        panel: Admin
         participants: Participants
         scope_types: Scope types
         scopes: Scopes
