--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -255,6 +255,7 @@ en:
                 other: The meeting cannot be destroyed because it has %{count} proposals associated to it
             success: Meeting successfully deleted
           edit:
+            title: Edit meeting
             update: Update
           form:
             address_help: 'Address: used by Geocoder to find the location'
@@ -289,6 +290,7 @@ en:
             invalid: There was a problem creating this minutes
             success: Minutes successfully created
           edit:
+            title: Edit minutes
             update: Update
           new:
             create: Create
