--- a/decidim-system/config/locales/en.yml
+++ b/decidim-system/config/locales/en.yml
@@ -1,14 +1,5 @@
 ---
 en:
-  activemodel:
-    attributes:
-      organization:
-        address: SMTP hostname
-        from_email: Email address
-        from_label: Label
-        password: Password
-        port: Port
-        user_name: Username
   decidim:
     system:
       actions:
@@ -91,10 +82,8 @@ en:
             api_key: API key
             api_secret: API secret
         smtp_settings:
-          fieldsets:
-            sender: Sender
           instructions:
-            from_label: 'Email sender will be: "your-organization-name <your-organization@your-provider.org>". Leave blank to use the ''Email address'' as label'
+            from_label: 'Email sender will be: "your-organization-name <your-organization@your-provider.org>". Leave blank to use the ''from_email'' as label'
           placeholder:
             from_email: your-organization@your-provider.org
             from_label: your-organization-name
