Include the count of reported times per user in the Reported user's section

--- a/decidim-admin/config/locales/en.yml
+++ b/decidim-admin/config/locales/en.yml
@@ -484,6 +484,7 @@ en:
           name: Name
           nickname: Nickname
           reason: Reason
+          reports: Reports count
           title: Listing reported users
         report:
           reasons:
