--- a/decidim-demographics/config/locales/en.yml
+++ b/decidim-demographics/config/locales/en.yml
@@ -16,9 +16,10 @@ en:
             age_prompt: Please select your age
             gender_help: Please select your gender
             gender_prompt: Your gender
+            tos_page_link: "By clicking on the button below you expressly confirm that you have read and understood our "
             genders:
               man: Man
-              non_binary: Other
+              non_binary: None of the above/ Non binary/ do not recognize yourself in above categories
               woman: Woman
             nationalities:
               austrian: Austrian
@@ -49,20 +50,80 @@ en:
               slovenian: Slovenian
               spanish: Spanish
               swede: Swede
-            nationalities_help: Please select up to 3 nationalities
-            nationality_prompt: ''
-            professional_categories:
-              house-worker: House worker
+            countries:
+              austria: Austria
+              belgium: Belgium
+              bulgaria: Bulgaria  
+              croatia: Croatia
+              cyprus: Cyprus
+              czechia: Czechia
+              denmark: Denmark
+              estonia: Estonia
+              finland: Finland
+              france: France 
+              germany: Germany
+              greece: Greece
+              hungary: Hungary
+              ireland: Ireland
+              italy: Italy
+              latvia: Latvia
+              lithuania: Lithuania
+              luxembourg: Luxembourg
+              malta: malta
+              netherlands: Netherlands
+              poland: Poland
+              portugal: Portugal
+              romania: Romania
+              slovakia: Slovakia
+              slovenia: Sovenia
+              spain: Spain
+              sweden: Sweden
+              other: Other  
+            nationalities_help: Please select up to 3 nationalities (CONTROL click to select multiple or COMMAND click on Mac)
+            nationality_prompt: 'Nationality (tick up to 3):'
+            residence_prompt: 'Country of Residence (tick up to 2):'
+            residences_help: Please select up to 2 
+            subscribe_help: Please note, you can unsubscribe at any point via the platform or through pressing unsubscribe on the newsletter itself.
+            current_occupation_prompt: What is your current occupation?
+            current_occupations:
+              self-employed: Self-employed
               manager: Manager
               manual-worker: Manual worker
-              retired: Retired
-              self-employed: Self-employed
+              professional-worker: Professional worker (architect, accountant, lawyer, doctor, etc.)
+              house-person: House person
+              unemployed: Unemployed (please also tick occupation before unemployment)
+              retired: Retired (please also tick occupation before retirement)
               student: Student
-              unemployed: Unemployed
-              white-collar: White collar
+              other: Other (please specify)
+            living_conditions:
+              rural: Rural area or village
+              small: Small or middle sized town
+              large: Large town
+              unknown: "Don't know"
+            education_age_stops:
+              under_15: "15-" 
+              under_20: "16-19"
+              20_plus: "20+" 
+              still_studying: Still Studying  
+              no_full_time_education: No full-time education
+              refusal: Refusal  
+            attended_before:
+              affirmative: "Yes"
+              negative: "No"
+              unknown: "Don’t know"
           new:
             save: Save
   layouts:
     decidim:
       user_profile:
-        demographics: Demographic data
+        demographics: Demographic data 
+  activemodel:
+    attributes:
+      demographic:
+        age: How old are you?
+        nationalities:  Nationality (tick up to 3)
+        residences: Country of Residence (tick up to 2)
+        living_condition: Would you say you live in a...?
+        current_occupations: What is your current occupation?
+        education_age_stop: How old were you when you stopped full-time education?
+        attended_before:  Have you attended a public event that was about the European Union before (either online or in person)?
