add comments permissions to proposals

--- a/decidim-proposals/config/locales/en.yml
+++ b/decidim-proposals/config/locales/en.yml
@@ -118,6 +118,8 @@ en:
           endorse: Endorse
           vote: Support
           withdraw: Withdraw
+          comment: Comment
+          vote_comment: Vote comment
         name: Proposals
         settings:
           global:
