--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -685,8 +685,8 @@ en:
       file_help:
         file:
           explanation: 'Guidance for file:'
-          message_1: Has to be an image or a document.
-          message_2: For images, use preferrably landscape images, the service crops the image.
+          message_1: Has to be a document.
+          message_2: For csv format, the separator between columns must be ,
         image:
           explanation: 'Guidance for image:'
           message_1: Preferrably a landscape image that does not have any text.
