--- a/decidim-meetings/config/locales/en.yml
+++ b/decidim-meetings/config/locales/en.yml
@@ -1,4 +1,5 @@
 ---
+
 en:
   activemodel:
     attributes:
@@ -208,6 +209,7 @@ en:
             invalid: There was a problem updating this agenda
             success: Agenda successfully updated
         exports:
+          meeting_comments: Comments
           meetings: Meetings
           registrations: Registrations
         invite_join_meeting_mailer:
