Set fixed links in redesigned_main_legal partial

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1832,6 +1832,7 @@ en:
         decidim_title: Decidim
         download_open_data: Download Open Data files
         made_with_open_source: Website made with <a target="_blank" href="https://github.com/decidim/decidim">free software</a>.
+        terms_and_conditions: Terms and Conditions
       header:
         close_menu: Close menu
         main_menu: Main menu
