Reorder elements in main links of footer and define links and texts

--- a/decidim-core/config/locales/en.yml
+++ b/decidim-core/config/locales/en.yml
@@ -1832,6 +1832,9 @@ en:
         decidim_title: Decidim
         download_open_data: Download Open Data files
         made_with_open_source: Website made with <a target="_blank" href="https://github.com/decidim/decidim">free software</a>.
+        resources: Resources
+        sign_in: Sign In
+        sign_up: Sign Up
         terms_and_conditions: Terms and Conditions
       header:
         close_menu: Close menu
@@ -1867,6 +1870,7 @@ en:
       user_menu:
         account: 'User account: %{name}'
         admin_dashboard: Admin dashboard
+        configuration: Configuration
         conversations: Conversations
         notifications: Notifications
         profile: My account
